# student-manager

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  main.cpp
models/: Score.cpp  Score.h  Student.cpp  Student.h
stores/: ScoreStash.cpp  ScoreStash.h  Store.cpp  Store.h  StudentStash.cpp  StudentStash.h
views/: MainMenu.cpp  MainMenu.h  ScoreDetail.cpp  ScoreDetail.h  StatisticsDetail.cpp  StatisticsDetail.h  StudentDetail.cpp  StudentDetail.h  UI.h
